--- a/index.html
+++ b/index.html
@@ -55,28 +55,24 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa-solid fa-child-reaching fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Écoute</h4>
-                        <p class="text-muted">Apprentissage de la lecture et de l'écriture : Méthodes ludiques et interactives adaptées aux jeunes enfants</p>
-                        <p class="text-muted">Soutien scolaire : Toutes les matières du programme scolaire, en cours particuliers</p>
+                        <h4 class="my-3">Accompagnement scolaire</h4>
+                        <p class="text-muted">Nous sommes une association dédiée à l’aide scolaire des élèves du primaire au lycée. Notre objectif est de soutenir les jeunes dans leur parcours éducatif et de favoriser leur réussite.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa-solid fa-graduation-cap fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3"> Cours pour Collégiens et Lycéens</h4>
-                        <p class="text-muted">Soutien scolaire : Cours particuliers dans toutes les matières du collège</p>
-                        <p class="text-muted">Mathématiques pour le lycée : Renforcement des compétences et préparation aux examens</p>
+                        <h4 class="my-3">Cours particuliers</h4>
+                        <p class="text-muted">Nous proposons des cours particuliers dans de nombreuses disciplines, adaptés au niveau et aux besoins de chaque élève, pour renforcer leurs compétences et leur confiance.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa-solid fa-earth-americas fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Cours de Langue Arabe</h4>
-                        <p class="text-muted">Enseignement en groupe : Cours collectifs dispensés dans nos locaux à Antibes</p>
-
-                        <p class="text-muted">Méthode adaptée : Utilisation de supports pédagogiques modernes pour faciliter l'apprentissage</p>
+                        <h4 class="my-3">Présents à Antibes</h4>
+                        <p class="text-muted">Basés à Antibes, nous intervenons localement pour offrir un accompagnement de proximité et créer un lien fort entre les familles, les élèves et nos intervenants.</p>
                     </div>
                 </div>
             </div>
