--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa-solid fa-earth-americas fa-stack-1x fa-inverse"></i>
+                            <i class="fa-solid fa-location-dot fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Présents à Antibes</h4>
                         <p class="text-muted">Basés à Antibes, nous intervenons localement pour offrir un accompagnement de proximité et créer un lien fort entre les familles, les élèves et nos intervenants.</p>
@@ -168,7 +168,7 @@
                 <!-- To make this form functional, sign up at-->
                 <!-- https://startbootstrap.com/solution/contact-forms-->
                 <!-- to get an API token!-->
-                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                <form id="contactForm" data-sb-form-api-token="8406d98a-4f5b-4504-9fa0-a9c421747ba4">
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
