--- a/index.html
+++ b/index.html
@@ -47,32 +47,32 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
+                    <h2 class="section-heading text-uppercase fade-in">Services</h2>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
+                        <span class="fa-stack fa-4x fade-in">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa-solid fa-child-reaching fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Accompagnement scolaire</h4>
-                        <p class="text-muted">Nous sommes une association dédiée à l’aide scolaire des élèves du primaire au lycée. Notre objectif est de soutenir les jeunes dans leur parcours éducatif et de favoriser leur réussite.</p>
+                        <p class="text-muted fade-in">Nous sommes une association dédiée à l’aide scolaire des élèves du primaire au lycée. Notre objectif est de soutenir les jeunes dans leur parcours éducatif et de favoriser leur réussite.</p>
                     </div>
                     <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
+                        <span class="fa-stack fa-4x fade-in">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa-solid fa-graduation-cap fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Cours particuliers</h4>
-                        <p class="text-muted">Nous proposons des cours particuliers dans de nombreuses disciplines, adaptés au niveau et aux besoins de chaque élève, pour renforcer leurs compétences et leur confiance.</p>
+                        <p class="text-muted fade-in">Nous proposons des cours particuliers dans de nombreuses disciplines, adaptés au niveau et aux besoins de chaque élève, pour renforcer leurs compétences et leur confiance.</p>
                     </div>
                     <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
+                        <span class="fa-stack fa-4x fade-in">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa-solid fa-location-dot fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Présents à Antibes</h4>
-                        <p class="text-muted">Basés à Antibes, nous intervenons localement pour offrir un accompagnement de proximité et créer un lien fort entre les familles, les élèves et nos intervenants.</p>
+                        <p class="text-muted fade-in">Basés à Antibes, nous intervenons localement pour offrir un accompagnement de proximité et créer un lien fort entre les familles, les élèves et nos intervenants.</p>
                     </div>
                 </div>
             </div>
@@ -81,44 +81,44 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
+                    <h2 class="section-heading text-uppercase fade-in">About</h2>
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/kid4.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid zoom-in" src="assets/img/about/kid4.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Primaire</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Apprentissage de la lecture et de l'écriture : Méthodes ludiques et interactives adaptées aux jeunes enfants.</p>
-                            <p class="text-muted">Soutien scolaire : Toutes les matières du programme scolaire, en cours particuliers.</p></div>
+                            <div class="timeline-body"><p class="text-muted fade-in">Apprentissage de la lecture et de l'écriture : Méthodes ludiques et interactives adaptées aux jeunes enfants.</p>
+                            <p class="text-muted fade-in">Soutien scolaire : Toutes les matières du programme scolaire, en cours particuliers.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/semikids.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid zoom-in" src="assets/img/about/semikids.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Collège</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Soutien scolaire : Cours particuliers dans toutes les matières du collège.</p></div>
+                            <div class="timeline-body"><p class="text-muted fade-in">Soutien scolaire : Cours particuliers dans toutes les matières du collège.</p></div>
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/bigkid.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid zoom-in" src="assets/img/about/bigkid.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Lycée</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Mathématiques pour le lycée : Renforcement des compétences et préparation aux examens</p></div>
+                            <div class="timeline-body"><p class="text-muted fade-in">Mathématiques pour le lycée : Renforcement des compétences et préparation aux examens</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/class.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid zoom-in" src="assets/img/about/class.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Cours de Langue Arabe</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Enseignement en groupe : Cours collectifs dispensés dans nos locaux à Antibes</p></div>
+                            <div class="timeline-body"><p class="text-muted fade-in">Enseignement en groupe : Cours collectifs dispensés dans nos locaux à Antibes</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -139,14 +139,14 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">The Team</h2>
+                    <h2 class="section-heading text-uppercase fade-in">The Team</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-4a">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/Initial Brand logo.png" alt="..." />
                             <h4>Fatma Gazzah</h4>
-                            <p class="text-muted">CEO</p>
+                            <p class="text-muted fade-in">CEO</p>
                         </div>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contactez nous</h2>
+                    <h2 class="section-heading text-uppercase fade-in">Contactez nous</h2>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
@@ -216,7 +216,7 @@
                     <!-- Submit Button-->
                     <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Send Message</button></div>
                 <div class="container my-5">
-  <div class="text-center"><h2 class="section-heading text-uppercase">Nous Trouver</h2></div>
+  <div class="text-center"><h2 class="section-heading text-uppercase fade-in">Nous Trouver</h2></div>
   <div class="ratio ratio-16x9">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2889.260796489981!2d7.115759015663692!3d43.56786977912325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12cdd9fd00309d0b%3A0x6cf1e74b0c637c3f!2s90%20Bd%20Raymond%20Poincar%C3%A9%2C%2006160%20Antibes!5e0!3m2!1sen!2sfr!4v1687115559865!5m2!1sen!2sfr"
