--- a/index.html
+++ b/index.html
@@ -142,11 +142,25 @@
                     <h2 class="section-heading text-uppercase fade-in">The Team</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4a">
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Initial Brand logo (2).png" alt="...">
+                            <h4>Ahmed Gazzah</h4>
+                            <p class="text-muted fade-in">chargée de communication</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/Initial Brand logo.png" alt="..." />
                             <h4>Fatma Gazzah</h4>
                             <p class="text-muted fade-in">CEO</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Initial Brand logo (3).png" alt="..." />
+                            <h4>Anis Kerouaz</h4>
+                            <p class="text-muted fade-in">Développeur</p>
                         </div>
                     </div>
                 </div>
