--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Masthead-->
         <header class="masthead">   
             <div class="container">
-                <div class="masthead-heading">Soutien Scolaire & Langues</div>
+                <div class="masthead-heading">Cours de langues et soutiens scolaire</div>
                 <div class="masthead-subheading">Enseignement personnalisé depuis 2022</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
             </div>
@@ -56,7 +56,7 @@
                             <i class="fa-solid fa-child-reaching fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Accompagnement scolaire</h4>
-                        <p class="text-muted fade-in">Nous sommes une association dédiée à l’aide scolaire des élèves du primaire au lycée. Notre objectif est de soutenir les jeunes dans leur parcours éducatif et de favoriser leur réussite.</p>
+                        <p class="text-muted fade-in">Nous sommes une entreprise dédiée à l’aide scolaire des élèves du primaire au lycée. Notre objectif est de soutenir les jeunes dans leur parcours éducatif et de favoriser leur réussite.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x fade-in">
@@ -104,19 +104,28 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid zoom-in" src="assets/img/about/bigkid.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid zoom-in" src="assets/img/about/francais.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Lycée</h4>
+                                <h4>Cours de langue français</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted fade-in">Mathématiques pour le lycée : Renforcement des compétences et préparation aux examens</p></div>
+                            <div class="timeline-body"><p class="text-muted fade-in">Enseignement en groupe : Cours collectifs dispensés dans nos locaux à Antibes</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid zoom-in" src="assets/img/about/class.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid zoom-in" src="assets/img/about/arabe.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Cours de Langue Arabe</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted fade-in">Enseignement en groupe : Cours collectifs dispensés dans nos locaux à Antibes</p></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid zoom-in" src="assets/img/about/english.jpg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Cours de langue anglais</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted fade-in">Enseignement en groupe : Cours collectifs dispensés dans nos locaux à Antibes</p></div>
                         </div>
