--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
                             <div class="timeline-heading">
                                 <h4>Primaire</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted fade-in">Apprentissage de la lecture et de l'écriture : Méthodes ludiques et interactives adaptées aux jeunes enfants.</p>
-                            <p class="text-muted fade-in">Soutien scolaire : Toutes les matières du programme scolaire, en cours particuliers.</p></div>
+                            <div class="timeline-body"><p class="text-muted fade-in">Soutien scolaire : Toutes les matières du programme scolaire, en cours particuliers.</p>
+                                <p class="text-muted fade-in">Accompagnement de la 6eme a la 3eme</p>
+                            </div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -100,7 +101,8 @@
                             <div class="timeline-heading">
                                 <h4>Collège</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted fade-in">Soutien scolaire : Cours particuliers dans toutes les matières du collège.</p></div>
+                            <div class="timeline-body"><p class="text-muted fade-in">Soutien scolaire : Cours particuliers dans toutes les matières du collège.</p>
+                            <p class="text-muted fade-in">Acompagnement du CP au CM2</p></div>
                         </div>
                     </li>
                     <li>
