--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <i class="fa-solid fa-child-reaching fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Accompagnement scolaire</h4>
-                        <p class="text-muted fade-in">Nous sommes une entreprise dédiée à l’aide scolaire des élèves du primaire au lycée. Notre objectif est de soutenir les jeunes dans leur parcours éducatif et de favoriser leur réussite.</p>
+                        <p class="text-muted fade-in">Nous accompagnons les élèves du primaire au lycée avec un soutien adapté à leur parcours pour favoriser leur réussite.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x fade-in">
@@ -64,7 +64,7 @@
                             <i class="fa-solid fa-graduation-cap fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Cours particuliers</h4>
-                        <p class="text-muted fade-in">Nous proposons des cours particuliers dans de nombreuses disciplines, adaptés au niveau et aux besoins de chaque élève, pour renforcer leurs compétences et leur confiance.</p>
+                        <p class="text-muted fade-in">Des cours sur mesure, dans toutes les matières, pour répondre aux besoins de chaque élève et développer leurs compétences et leur confiance.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x fade-in">
@@ -72,7 +72,7 @@
                             <i class="fa-solid fa-location-dot fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Présents à Antibes</h4>
-                        <p class="text-muted fade-in">Basés à Antibes, nous intervenons localement pour offrir un accompagnement de proximité et créer un lien fort entre les familles, les élèves et nos intervenants.</p>
+                        <p class="text-muted fade-in">Implantés à Antibes, nous offrons un accompagnement de proximité pour créer un lien fort avec les élèves et leurs familles.</p>
                     </div>
                 </div>
             </div>
